cheese-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheese
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: s.example.com
    http:
      paths:
      - backend:
          service:
            name: stilton
            port:
              name: http
        pathType: ImplementationSpecific
  - host: c.example.com
    http:
      paths:
      - backend:
          service:
            name: cheddar
            port:
              name: http
        pathType: ImplementationSpecific
  - host: w.example.com
    http:
      paths:
      - backend:
          service:
            name: wensleydale
            port:
              name: http
        pathType: ImplementationSpecific
  tls:
  - secretName: cheese-tls
    hosts:
    - c.example.com
    - s.example.com
    - w.example.com
